--- a/src/css/style/layout.scss
+++ b/src/css/style/layout.scss
@@ -3,6 +3,24 @@
   height: 100%;
   width: 100%;
 
+  .short-cut {
+    background: rgba(255, 201, 201, 0.8);
+    position: absolute;
+    z-index: 100000;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    .line {
+      width: 100%;
+      height: 30px;
+      background-color: blue;
+
+      .item {
+      }
+    }
+  }
+
   .content-area {
     position: absolute;
     background-color: rgb(82, 82, 82);
