add: added an alarm component

--- a/src/css/style/vars.scss
+++ b/src/css/style/vars.scss
@@ -21,6 +21,18 @@ $sky: #07ebcf;
 $sky2: #4b96e6;
 $lightgreen: #34c38f;
 
+$toast-danger: #ffb3b3;
+$toast-warning: #f3c980;
+$toast-success: #66c7a3;
+$toast-info: #86c0f3;
+$toast-secondary: #d9d9d9;
+
+$toast-danger-progress: #ec7e7e;
+$toast-warning-progress: #ebaf47;
+$toast-success-progress: #3cb387;
+$toast-info-progress: #4b89c0;
+$toast-secondary-progress: #d9d9d9;
+
 // light - theme colors
 $light-font-inverse: black;
 $light-bg-color: #f6f6f8;
